2nd commit - adding reply functionality to posts

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,11 @@ div.index-style {
     margin: 5px 0;
 }
 
+p.login-error {
+    color: red;
+    margin-right: 10px;
+}
+
 .logout {
     color: white;
     text-decoration: none;
