--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 <div id="main-content">
     <div class="row mb-3 text-center">
         <div class="col-md-8 themed-grid-col">Title</div>
-        <div class="col-md-2 themed-grid-col">Replies</div>
-      <div class="col-md-2 themed-grid-col">Username and Date</div>
+        <div class="col-md-1 themed-grid-col">Replies</div>
+      <div class="col-md-3 themed-grid-col">Username and Date</div>
 
         {% for post in all_posts %}
 
         <div class="col-md-8 themed-grid-col index-style">{{ post.title }}</div>
-        <div class="col-md-2 themed-grid-col index-style">10</div>
-        <div class="col-md-2 themed-grid-col index-style">{{ post.author_id }} {{ post.date }}</div>
+        <div class="col-md-1 themed-grid-col index-style">{{ post.reply_count }}</div>
+        <div class="col-md-3 themed-grid-col index-style">{{ post.author_id }} {{ post.date }}</div>
 
         {% endfor %}
 
