--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ page_title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="static/css/style.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 </head>
 <body>
 <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
@@ -59,13 +59,13 @@
           <a class="nav-link" href="/new">New Post</a>
         </li>
         {% endif %}
-      </ul><p style="color:red">{{ error }}</p>
+      </ul><p class="login-error">{{ error }} </p>
       {% if current_user.is_authenticated: %}
         <a class="logout" href="/logout">Logout</a>
       {% else %}
       <form class="d-flex" action="/login" method="post">
-        <input class="form-control me-2" type="text" name="usernameInput" placeholder="username">
-        <input class="form-control me-2" type="password" name="passwordInput" placeholder="password">
+        <input class="form-control me-2" type="text" name="usernameInput" placeholder="username" required>
+        <input class="form-control me-2" type="password" name="passwordInput" placeholder="password" required>
         <button class="btn btn-outline-success" type="submit">Login</button>
       </form>
       {% endif %}
