--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ div#form-content {
 
 div.index-style {
     background-color: #f2f2f2;
-    padding: 5px 0;
+    padding: 5px;
     margin: 5px 0;
 }
 
