--- a/templates/header.html
+++ b/templates/header.html
@@ -58,6 +58,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/new">New Post</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/my_posts">My Posts</a>
+        </li>
         {% endif %}
       </ul><p class="login-error">{{ error }} </p>
       {% if current_user.is_authenticated: %}
