5th commit - added more user functionality again

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,10 @@ p.login-error {
     margin-right: 10px;
 }
 
+.edit-form-space {
+    margin: 10px 0;
+}
+
 .logout {
     color: white;
     text-decoration: none;
